<resources>
    <string name="app_name">Notist</string>
    <string name="notes">Notes</string>
    <string name="search_notes">Search Notes</string>
    <string name="note_subtitle">Note Subtitle</string>
    <string name="note_title">Note Title</string>
    <string name="type_your_note">Type your Note…</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="pick_color">Pick Color</string>
    <string name="add_image">Add Image</string>
    <string name="add_url">Add URL</string>
    <string name="add">ADD</string>
    <string name="cancel">CANCEL</string>
    <string name="delete_note">Delete Note</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="not_registered_yet_register_now">Not registered yet? Register Now</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account? Login</string>
    <string name="logout">Logout</string>
</resources>